@@ -128,6 +128,8 @@ Core and builtins
 Library
 -------
 
+- Patch #1647484: Renamed GzipFile's filename attribute to name.
+
 - Patch #1517891: Mode 'a' for ZipFile now creates the file if it
   doesn't exist.
 
